--- a/main.css
+++ b/main.css
@@ -1,14 +1,34 @@
 body{
     background-color: black;
 }
-.until{
+
+.global{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    max-width: 600px;
+}
+
+.until_full{
     margin: 25px;
     max-width: 500px;
     display:grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1em;
     padding: 1em;
-    background: #000000;
+    background: #6b6b6b;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    font-family: sans-serif;
+}
+
+.until_weeks{
+    margin: 25px;
+    max-width: 200px;
+    display:grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1em;
+    padding: 1em;
+    background: #6b6b6b;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
     font-family: sans-serif;
@@ -16,7 +36,7 @@ body{
 
 .until__component{
     text-align: center;
-    background: black;
+    background: rgb(44, 44, 44);
     border-radius: 5px;
 }
 
@@ -31,7 +51,7 @@ body{
     font-size: 1.2em;
     padding-bottom: 1em;
     font-weight: bold;
-    color:darkslategrey;
+    color:rgb(97, 114, 114);
 }
 
 .until__event{
